--- a/public/view/index.html
+++ b/public/view/index.html
@@ -13,10 +13,14 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Kaushan+Script&display=swap');
 
         .font-family-karla {
             font-family: karla
+        }
+
+        .font-family-kaushan {
+            font-family: 'Kaushan Script'
         }
     </style>
 </head>
@@ -27,10 +31,9 @@
         <div x-data="{ isOpen: false }"
             class="max-w-3xl mx-auto py-3 px-6 md:px-0 md:flex md:justify-between md:items-center">
             <div class="flex justify-between items-center">
-                <div class="flex items-center">
-                    <img src="http://pm1.narvii.com/7221/2b6578b96992fd37df7cba2882d63b9edff9f39br1-750-783v2_uhq.jpg"
-                        class="h-8 shadow rounded-full" alt="">
-                    <a href="#!" class="ml-4 text-gray-800 text-xl hover:text-gray-700">Zeldris</a>
+                <div>
+                    <a class="font-family-kaushan text-xl text-gray-800 dark:text-white md:text-2xl hover:text-red-600 dark:hover:text-gray-300"
+                        href="#">LmaoXD</a>
                 </div>
 
                 <!-- Mobile Menu -->
@@ -48,14 +51,40 @@
             </div>
 
             <!-- Menu if mobil set to hidden -->
-            <div :class="isOpen ? 'show' : 'hidden'" class="md:flex items-center mt-4 md:mt-0">
-                <div class="flex flex-col md:flex-row md:ml-6">
-                    <a href="#!"
-                        class="my-1 text-sm text-gray-700 font-medium hover:text-indigo-500 md:mx-4 md:my-0">Home</a>
-                    <a href="#!"
-                        class="my-1 text-sm text-gray-700 font-medium hover:text-indigo-500 md:mx-4 md:my-0">About</a>
-                    <a href="#!"
-                        class="my-1 text-sm text-gray-700 font-medium hover:text-indigo-500 md:mx-4 md:my-0">Contact</a>
+            <div :class="isOpen ? 'show' : 'hidden'"
+                class="w-full md:flex md:items-center md:justify-between mt-4 md:mt-0">
+                <div class="flex flex-col px-2 py-3 -mx-4 md:flex-row md:mx-0 md:py-0">
+                    <a href="#"
+                        class="px-2 py-1 text-sm font-medium text-gray-700 transition-colors duration-200 transform rounded dark:text-gray-200 hover:bg-red-500 hover:text-gray-100 md:mx-2">Home</a>
+                    <a href="#"
+                        class="px-2 py-1 text-sm font-medium text-gray-700 transition-colors duration-200 transform rounded dark:text-gray-200 hover:bg-red-500 hover:text-gray-100 md:mx-2">About</a>
+                    <a href="#"
+                        class="px-2 py-1 text-sm font-medium text-gray-700 transition-colors duration-200 transform rounded dark:text-gray-200 hover:bg-red-500 hover:text-gray-100 md:mx-2">Contact</a>
+                    <a href="#"
+                        class="flex flex-row items-center px-2 py-1 text-sm font-medium text-gray-700 transition-colors duration-200 transform rounded dark:text-gray-200 hover:bg-red-500 hover:text-gray-100 md:mx-2">
+                        Username
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            class="w-4 h-4 ml-1 stroke-2 stroke-current text-gray-700 hover:text-gray-100"
+                            viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3" />
+                            <circle cx="12" cy="10" r="3" />
+                            <circle cx="12" cy="12" r="10" /></svg>
+                    </a>
+                </div>
+
+                <div class="relative">
+                    <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+                        <svg class="w-5 h-5 text-gray-400" viewBox="0 0 24 24" fill="none">
+                            <path
+                                d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            </path>
+                        </svg>
+                    </span>
+
+                    <input type="text"
+                        class="w-full py-1 pl-10 pr-4 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:ring-2 focus:ring-red-500 dark:focus:border-blue-500 focus:outline-none"
+                        placeholder="Search">
                 </div>
             </div>
         </div>
