--- a/public/view/index.html
+++ b/public/view/index.html
@@ -51,8 +51,7 @@
             </div>
 
             <!-- Menu if mobil set to hidden -->
-            <div :class="isOpen ? 'show' : 'hidden'"
-                class="w-full md:flex md:items-center md:justify-between mt-4 md:mt-0">
+            <div :class="isOpen ? 'show' : 'hidden'" class="w-full md:flex md:items-center space-x-3 mt-4 md:mt-0">
                 <div class="flex flex-col px-2 py-3 -mx-4 md:flex-row md:mx-0 md:py-0">
                     <a href="#"
                         class="px-2 py-1 text-sm font-medium text-gray-700 transition-colors duration-200 transform rounded dark:text-gray-200 hover:bg-red-500 hover:text-gray-100 md:mx-2">Home</a>
@@ -62,14 +61,69 @@
                         class="px-2 py-1 text-sm font-medium text-gray-700 transition-colors duration-200 transform rounded dark:text-gray-200 hover:bg-red-500 hover:text-gray-100 md:mx-2">Contact</a>
                     <a href="#"
                         class="flex flex-row items-center px-2 py-1 text-sm font-medium text-gray-700 transition-colors duration-200 transform rounded dark:text-gray-200 hover:bg-red-500 hover:text-gray-100 md:mx-2">
-                        Username
-                        <svg xmlns="http://www.w3.org/2000/svg"
-                            class="w-4 h-4 ml-1 stroke-2 stroke-current text-gray-700 hover:text-gray-100"
-                            viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3" />
-                            <circle cx="12" cy="10" r="3" />
-                            <circle cx="12" cy="12" r="10" /></svg>
+                        Profile
                     </a>
+                </div>
+
+                <div x-data="{ isNotifOpen: false }" class="relative">
+                    <!-- Dropdown toggle button -->
+                    <button
+                        class="relative left-1 z-10 block p-2 bg-white rounded-md dark:bg-gray-800 focus:outline-none"
+                        aria-label="toggle notif" @click="isNotifOpen = !isNotifOpen">
+                        <svg class="w-5 h-5 text-gray-700 dark:text-white transition-colors duration-200 hover:text-red-500"
+                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                            <path
+                                d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z" />
+                        </svg>
+                    </button>
+
+                    <!-- Dropdown menu -->
+                    <div :class="isNotifOpen ? 'show' : 'hidden'"
+                        class="absolute left-0 z-20 mt-4 overflow-hidden bg-white rounded-md shadow-lg w-80 dark:bg-gray-800">
+                        <div class="py-2">
+                            <a href="#!"
+                                class="flex items-center px-4 py-3 -mx-2 transition-colors duration-200 transform border-b hover:bg-gray-100 dark:hover:bg-gray-700 dark:border-gray-700">
+                                <img class="object-cover w-8 h-8 mx-1 rounded-full"
+                                    src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
+                                    alt="avatar">
+                                <p class="mx-2 text-sm text-gray-600 dark:text-white">
+                                    <span class="font-bold" href="#">Sara Salah</span> replied on the <span
+                                        class="font-bold text-red-500" href="#">Upload Image</span> artical . 2m
+                                </p>
+                            </a>
+                            <a href="#!"
+                                class="flex items-center px-4 py-3 -mx-2 transition-colors duration-200 transform border-b hover:bg-gray-100 dark:hover:bg-gray-700 dark:border-gray-700">
+                                <img class="object-cover w-8 h-8 mx-1 rounded-full"
+                                    src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+                                    alt="avatar">
+                                <p class="mx-2 text-sm text-gray-600 dark:text-white">
+                                    <span class="font-bold" href="#">Slick Net</span> start following you . 45m
+                                </p>
+                            </a>
+                            <a href="#!"
+                                class="flex items-center px-4 py-3 -mx-2 transition-colors duration-200 transform border-b hover:bg-gray-100 dark:hover:bg-gray-700 dark:border-gray-700">
+                                <img class="object-cover w-8 h-8 mx-1 rounded-full"
+                                    src="https://images.unsplash.com/photo-1450297350677-623de575f31c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
+                                    alt="avatar">
+                                <p class="mx-2 text-sm text-gray-600 dark:text-white">
+                                    <span class="font-bold" href="#">Jane Doe</span> Like Your reply on <span
+                                        class="font-bold text-red-500" href="#">Test with TDD</span> artical . 1h
+                                </p>
+                            </a>
+                            <a href="#!"
+                                class="flex items-center px-4 py-3 -mx-2 transition-colors duration-200 transform hover:bg-gray-100 dark:hover:bg-gray-700">
+                                <img class="object-cover w-8 h-8 mx-1 rounded-full"
+                                    src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=398&q=80"
+                                    alt="avatar">
+                                <p class="mx-2 text-sm text-gray-600 dark:text-white">
+                                    <span class="font-bold" href="#">Abigail Bennett</span> start following you . 3h
+                                </p>
+                            </a>
+                        </div>
+                        <a href="#"
+                            class="block py-2 font-bold text-center text-white bg-gray-800 dark:bg-gray-700 hover:underline">See
+                            all notifications</a>
+                    </div>
                 </div>
 
                 <div class="relative">
@@ -84,7 +138,7 @@
 
                     <input type="text"
                         class="w-full py-1 pl-10 pr-4 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:ring-2 focus:ring-red-500 dark:focus:border-blue-500 focus:outline-none"
-                        placeholder="Search">
+                        placeholder="Search works">
                 </div>
             </div>
         </div>
